--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.version>1.8</maven.compiler.version>
+		<maven.compiler.source>1.9</maven.compiler.source>
+		<maven.compiler.target>1.9</maven.compiler.target>
+		<maven.compiler.version>1.9</maven.compiler.version>
 		<guava.version>28.1-jre</guava.version>
 		<lombok.version>1.18.10</lombok.version>
 		<logback.version>1.2.3</logback.version>
@@ -220,11 +220,6 @@
 			<artifactId>validation-api</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -278,7 +273,7 @@
 					<target>${maven.compiler.target}</target>
 			        <compilerVersion>${maven.compiler.version}</compilerVersion>
 			        <fork>true</fork>
-			        <executable>C:\Program Files\Java\jdk1.8.0_131\bin\javac</executable>      
+			        <executable>C:\DEVRES\jdk-9.0.4\bin\javac</executable>
 				</configuration>
 			</plugin>
 
